Archive2/4c/5bab98afd94ecf/output
main.cpp: In function 'std::string Coder(std::string, int)':
main.cpp:51:1: error: a function-definition is not allowed here before '{' token
 {
 ^
main.cpp:53:1: error: expected '}' at end of input
 }
 ^
